[package]
name = "pair"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.token_supply]
path = "src/common/modules/token_supply"

[dependencies.token_send]
path = "src/common/modules/token_send"

[dependencies.itertools]
version = "0.10.1"
default-features = false

[dependencies.elrond-wasm]
version = "0.22.6"

[dev-dependencies.elrond-wasm-debug]
version = "0.22.6"

[dependencies.common_structs]
path = "src/common/common_structs"
